# audio-sidecar

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  Containerfile  README.md  audio-sidecar-config  audio-sidecar-config.toml  audio-sidecar-extension.py  build.rs  main.c  record audio
audio-sidecar/: Cargo.toml
audio-sidecar/src/: config.rs  flac.rs  gui.rs  main.rs  sdl.rs  utils.rs
flac-sys/: Cargo.toml  build.rs  lib.rs  wrapper.h
sdl-ttf-sys/: Cargo.toml  build.rs
src/: flac.rs  main.rs  sdl.rs
