[package]
name = "audio_sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl3-sys = { version = "0.2", features = ["build-from-source", "link-static"] }
# for WAV encoding/decoding
#hound = { version = "3.5.1"}
# for FLAC encoding
flacenc = { version = "0.4.0"}
# for FLAC decoding
claxon = { version = "0.4.3"}