[package]
name = "audio_sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.6"
sdl3-sys = { version = "0.3.0", features = ["build-from-source", "link-static"] }
# for WAV encoding/decoding
#hound = "3.5.1"
# for FLAC encoding
flacenc = "0.4.0"
# for FLAC decoding
claxon = "0.4.3"