[package]
name = "audio_sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.6"
sdl3-sys = { version = "0.4.0", features = ["build-from-source", "link-static"] }
# for FLAC encoding
flacenc = { version = "0.4.0"}
# for FLAC decoding
#claxon = "0.4.3"
# for text rendering until a sdl3_ttf crate is available
#cosmic-text = "0.12.1"
log = "0.4.25"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19"}
tracing-appender = "0.2.3"
