[package]
name = "audio_sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "^0.15"
sdl3-sys = { version = "0.4.4", features = ["build-from-source", "link-static"] }
# for FLAC decoding
#claxon = "0.4.3"
# for text rendering until a sdl3_ttf crate is available
#cosmic-text = "0.12.1"
log = "^0.4"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3"}
tracing-appender = "^0.2"
flac-sys = { path = "../flac-sys"}
